spacing fix, excited to see how it backfires

--- a/style.scss
+++ b/style.scss
@@ -46,22 +46,30 @@ body {
 	max-width: 800px;
 	box-sizing: border-box;
 	margin: auto;
-	padding: 0 $padding;
+	padding: 0;
   display: flex;
   flex-direction: column;
 	background-color: #131619;
 }
 
 #content {
-	padding: 0;
+	padding: $padding;
   flex: 1 0 auto;
+}
+
+/* #content > */ *:first-child {
+	margin-top: 0;
+}
+
+/* #content > */ *:last-child {
+	margin-bottom: 0;
 }
 
 header {
 	height: 180px;
 	box-sizing: border-box;
 	position: relative;
-	margin: 0 $npadding;
+	margin: 0;
 	text-align: right;
 	flex-shrink: 0;
 	
@@ -83,7 +91,7 @@ header {
 }
 
 footer {
-	margin: 0 $npadding;
+	margin: 0 0;
 	padding: 10px $padding;
 	flex-shrink: 0;
 	background-color: #1e2226;
@@ -121,8 +129,16 @@ header a:hover, header a:active {
 	color: #fff;
 }
 
+p {
+	margin: 12px 0;
+}
+
 pre {
 	padding: 10px;
 	background-color: #000;
 	letter-spacing: 0;
+}
+
+ul, ol {
+	margin: 12px 0;
 }
